[tool.poetry]
name = "regression-model"
version = "0.1.0"
description = ""
authors = ["Gizzatov Amir <gizzatovamir777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.3.0"
torchaudio = "^2.3.0"
torchvision = "^0.18.0"
notebook = "^7.1.3"
jupyterlab = "^4.1.8"
ipykernel = "^6.29.4"
poetry-kernel = "^0.1.3"
matplotlib = "3.7.0"
pandas = "2.0.3"
jedi = "^0.19.1"
seaborn = "^0.13.2"
jupyter-contrib-nbextensions = "^0.7.0"
torcheval = "^0.0.7"
torchmetrics = "^1.3.2"
tensorboard = "2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
